Updated: ViewSpotActivity, activity_viewspot.xml, strings.xml

--- a/CPS/res/values/strings.xml
+++ b/CPS/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">CPS</string>
+    <string name="checkInOut"/>
+    <string name="lotNumber"/>
+    <string name="spotNumber"/>
 
 </resources>
